Fix CSS bottom padding or timeline
Also note list width is too large and intercepting clicks.

--- a/src/components/note/note.css
+++ b/src/components/note/note.css
@@ -1,10 +1,9 @@
 .NoteList {
-  position: absolute;
+  position: fixed;
   top: 0rem;
   left: 50%;
   translate: -50% -2px;
   z-index: var(--z-toast);
-  width: 100%;
   padding: 0;
 }
 
